# Lite3_LLM

./: llm_demo.py
llm_control/src/llm_control/: CMakeLists.txt  package.xml
llm_control/src/llm_control/src/: llm_control.cpp
